crates/backends/sqlite/tests/snapshots/sqlite__schema_evolution.snap
---
source: crates/backends/sqlite/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
catalog:
  namespaces:
    - name: main
      comment: ~
  tables:
    - namespace: main
      name: imported_records
      comment: ~
      columns:
        - name: id
          data_type: ""
          nullable: true
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: label
          data_type: ""
          nullable: true
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
      constraints: []
      indexes: []
      without_rowid: false
      strict: false
      definition: "CREATE TABLE imported_records(id,label)"
      kind:
        kind: ordinary
    - namespace: main
      name: records
      comment: ~
      columns:
        - name: id
          data_type: INTEGER
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: name
          data_type: TEXT
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: normalized_name
          data_type: TEXT
          nullable: true
          default: ~
          comment: ~
          kind: virtual_generated
          collation: BINARY
          generated_expression: lower (name)
        - name: optional_note
          data_type: TEXT
          nullable: true
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
      constraints:
        - name: ~
          kind: primary_key
          columns:
            - id
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - name
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      indexes: []
      without_rowid: false
      strict: false
      definition: "CREATE TABLE \"records\" (\n    id INTEGER PRIMARY KEY,\n    name TEXT NOT NULL,\n    normalized_name TEXT GENERATED ALWAYS AS (lower(name)) VIRTUAL, optional_note TEXT)"
      kind:
        kind: ordinary
  views: []
  triggers: []
